--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <title>About | A2E Group Tech</title>
     <link rel="shortcut icon" type="image/x-icon" href="/A2E Logo2.ico">
     <!-- UIkit CSS -->
-    <link rel="stylesheet" href="/css/uikit.min.css" />
+    <link rel="stylesheet" href="/uikit.min.css" />
     <!-- UIkit JS -->
-    <script src="/js/uikit.min.js"></script>
-    <script src="/js/uikit-icons.min.js"></script>
+    <script src="/uikit.min.js"></script>
+    <script src="/uikit-icons.min.js"></script>
     <style>
     body {
       border: none;
