--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <base target="_top">
     <title>About | A2E Group Tech</title>
-    <link rel="shortcut icon" type="image/x-icon" href="/A2E Logo2.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     <!-- UIkit CSS -->
     <link rel="stylesheet" href="/uikit.min.css" />
     <!-- UIkit JS -->
