--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <base target="_top">
     <title>About | A2E Group Tech</title>
-    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+    <!--<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">-->
     <!-- UIkit CSS -->
-    <link rel="stylesheet" href="/uikit.min.css" />
+    <!--<link rel="stylesheet" href="/uikit.min.css" />-->
     <!-- UIkit JS -->
-    <script src="/uikit.min.js"></script>
-    <script src="/uikit-icons.min.js"></script>
+    <!--<script src="/uikit.min.js"></script>
+    <script src="/uikit-icons.min.js"></script>-->
     <style>
     body {
       border: none;
