--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
       padding: 0px;
     }
     </style>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-170035025-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-170035025-1');
+    </script>
   </head>
   <body>
     <div uk-grid>
