--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html style="background-color:#34d2eb">
   <head>
     <base target="_top">
-    <link href="/head"/>
+    <link href="/head.html"/>
   </head>
   <body style="background-color:#34d2eb">
-    <link href="/navbar"/>
+    <link href="/navbar.html"/>
     
     <div class="uk-flex uk-flex-center"><div class="uk-width-5-6 uk-flex uk-flex-center" uk-grid>
-      <link href="/dashGrid"/>
+      <link href="/dashGrid.html"/>
     </div></div>
 
     <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="a2egroup" data-description="Support me on Buy me a coffee!" data-message="" data-color="#5F7FFF" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
@@ -27,9 +27,9 @@
       <br>
     </div>
 
-    <link href="/playModal"/>
+    <link href="/playModal.html"/>
 
-    <link href="/js"/>
+    <link href="/js.html"/>
     <div id="user" hidden></div>
     <div id="pw" hidden></div>
   </body>
