Added Adsense code

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html style="background-color:#34d2eb">
   <head>
     <base target="_top">
+    <script data-ad-client="ca-pub-1569802862994624" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <title>Photo Game</title>
     <meta name="robots" content="noindex">
         <!-- UIkit CSS -->
