--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html style="background-color:#34d2eb">
   <head>
     <base target="_top">
-    <script data-ad-client="ca-pub-1569802862994624" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <title>Photo Game</title>
     <meta name="robots" content="noindex">
         <!-- UIkit CSS -->
@@ -184,13 +183,14 @@
         </div></div>
     </div>-->
     <div class="uk-navbar-center">
-        <a class="uk-navbar-item uk-logo" href="#">The Picture Game</a>
+        <a class="uk-navbar-item uk-logo" href="https://a2egroup.us">The Picture Game</a>
     </div>
     <div class="uk-navbar-right">
         <div class="uk-navbar-right"><div>
             <ul class="uk-navbar-nav">
-                <li><a href="#">Points</a></li>
-                <li><a href="#" id="pointsTotal">0</a></li>
+                <li><a onclick="showPoints()" id="accountName">Account</a></li>
+                <li><a onclick="showPoints()">Points</a></li>
+                <li><a onclick="showPoints()" id="pointsTotal">0</a></li>
             </ul>
         </div></div>
     </div>
@@ -271,7 +271,6 @@
       <div class="uk-grid uk-child-width-expand uk-text-center">
         <small><a href="https://a2egroup.us">Homepage</a></small>
         <small><a href="mailto:contact@a2egroup.us">Contact Us</a></small>
-        <small><a href="#">Submit Feedback</a></small>
       </div>
       <br>
     </div>
@@ -322,11 +321,18 @@
 
 <script>
   function startPlay() {
-    elem('photoTitle').innerHTML = 'Loading...'
-    showPhotosElem('photoLoading')
-    hide(elem('photoTimer'))
-    UIkit.modal(elem('playModal')).show()
-    link(server()+"?action=getPhotos",loadPhotos)
+    var user = elem('user').innerHTML
+    var pw = elem('pw').innerHTML
+    if (user == '' || pw == '') {
+      UIkit.modal(elem('authModal')).show()
+    }
+    else{
+      elem('photoTitle').innerHTML = 'Loading...'
+      showPhotosElem('photoLoading')
+      hide(elem('photoTimer'))
+      UIkit.modal(elem('playModal')).show()
+      link(server()+"?action=getPhotos&user="+user+"&pw="+pw,loadPhotos)
+    }
   }
 
   function loadPhotos(data) {
@@ -375,7 +381,7 @@
     var points = pointsFunc(time,10)
     elem('photoPoints').innerHTML=points
     elem('pointsTotal').innerHTML = Number(elem('pointsTotal').innerHTML) + points
-    link(server()+"?action=played&url="+url+"&user=me&pw=me2&id="+id+"&points="+points,function(data) {})
+    link(server()+"?action=played&url="+url+"&user="+elem('user').innerHTML+"&pw="+elem('pw').innerHTML+"&id="+id+"&points="+points,function(data) {})
     showPhotosElem('photoFinal')
   }
 
@@ -418,36 +424,114 @@
     }
   }
 </script>
+    <div id="authModal" class="uk-flex-top" uk-modal>
+    <div class="uk-modal-dialog uk-modal-body uk-margin-auto-vertical">
+
+        <h3 class="uk-modal-header uk-text-center">Enter Account Details</h3>
+
+        <div class="uk-flex uk-flex-center">
+          <div class="uk-width-2-3">
+            <label class="uk-form-label" for="username">Email</label>
+            <input id="username" class="uk-input" type="email">
+
+            <br><br>
+
+            <label class="uk-form-label" for="password">Password</label>
+            <input id="password" class="uk-input" type="password">
+
+            <br>
+            
+            <div uk-alert id="authNoPass" class="uk-alert-danger uk-hidden">
+                <p>Incorrect password. <a onclick="forgotPass()">Forgot your password?</a></p>
+            </div>
+            <div uk-alert id="authNoUser" class="uk-alert-danger uk-hidden">
+                <p>Username not found. Please try again or <a href="mailto:contact@a2egroup.us">contact customer service</a>.</p>
+            </div>
+            <div uk-alert id="authError" class="uk-alert-danger uk-hidden">
+                <p id="authErrorText"></p>
+            </div>
+
+            <br>
+
+          </div>
+        </div>
+
+        <div class="uk-modal-footer">
+            <button class="uk-button uk-button-primary uk-width-1-1" id="authButton" onclick="authCheck()">Sign In</button>
+        </div>
+
+    </div>
+</div>
+
+<script>
+  
+  function authCheck() {
+    hide(elem('authNoPass'))
+    hide(elem('authNoUser'))
+    hide(elem('authError'))
+    elem('authButton').innerHTML='<div uk-spinner style="color:#ffffff"></div>'
+    elem('username').setAttribute('disabled','true')
+    elem('password').setAttribute('disabled','true')
+    var email = elem('username').value
+    var hash = encrypt(elem('password').value)
+    
+    link(server()+"?action=auth&user="+email+"&pass="+hash, authCheck2)
+  }
+  function authCheck2(data) {
+    if (String(data).indexOf('Error: ') > -1) {
+      elem('authErrorText').innerHTML=data
+      show(elem('authError'))
+    } else if (data.msg == 'authNoUser') {
+      show(elem('authNoUser'))
+    } else if (data.msg == 'authNoPass') {
+      show(elem('authNoPass'))
+    } else if (data.msg == 'authSuccess') {
+      elem('user').innerHTML = data.email
+      elem('pw').innerHTML = data.pass
+      UIkit.modal(elem('authModal')).hide()
+      elem('password').value = data.pass
+      elem('accountName').innerHTML = data.email
+      //refresh()
+    } else {
+      elem('authErrorText').innerHTML='Unknown server error occurred. Please try again later.'
+      show(elem('authError'))
+    }
+
+    elem('authButton').innerHTML='Sign In'
+    elem('username').removeAttribute('disabled')
+    elem('password').removeAttribute('disabled')
+  }
+
+  function forgotPass() {
+    hide(elem('authNoPass'))
+    var email = elem('username').value
+    var pass = randStr(6)
+    link(server()+"?action=newPass&user="+email+"&pass="+pass+"&hash="+encrypt(pass), authCheck2)
+    elem('authButton').innerHTML='Sign In'
+    elem('username').removeAttribute('disabled')
+    elem('password').removeAttribute('disabled')
+    UIkit.notification({
+      message: 'New password emailed to you.',
+      status: 'primary',
+      pos: 'top-right',
+      timeout: 7000
+    });
+  }
+</script>
 
     <script>
-  function refresh() {
+
+  function showPoints() {
     var user = elem('user').innerHTML
     var pw = elem('pw').innerHTML
-    dashLoading(true)
-    link(server()+"?action=refresh&user="+user+"&pass="+pw,refresh2)
-  }
-
-  function refresh2(data) {
-    elem('detailsTable').innerHTML=""
-    addToTable('detailsTable',data.details)
-    elem('activityTable').innerHTML=""
-    addToTable('activityTable',data.activity)
-    elem('subsTable').innerHTML=""
-    addToTable('subsTable',data.subs)
-    var rows = elem('subsTable').children
-    for (var i = 0; i < rows.length; i++) {
-      var email = rows[i].children[0].innerHTML
-      var td = document.createElement('td')
-      var mail = 'mailto:'+email
-      var remove = 'removeSub('+email+')'
-      td.innerHTML = '<a href="'+mail+'" uk-icon="mail"></a> <a href="" onclick="'+remove+'" uk-icon="trash"></a>'
-      rows[i].appendChild(td)
+    if (user == '' || pw == '') {
+      UIkit.modal(elem('authModal')).show()
     }
-    dashLoading(false)
-  }
-
-  function removeSub(email) {
-
+    else{
+      var code = randStr(100)
+      link(server()+"?action=createCode&code="+code+"&user="+user+"&pw="+pw)
+      window.open("https://a2egroup.us/points?code="+code+"&p="+Number(elem('points').innerHTML*123456789))
+    }
   }
 
   function addToTable(id, data) {
@@ -458,25 +542,6 @@
         var td = document.createElement('td')
         td.innerHTML = data[i][j]
         tr.appendChild(td)
-      }
-    }
-  }
-
-  function dashLoading(loading) {
-    var preLoadingElems = document.getElementsByClassName('dashLoading')
-    var postLoadingElems = document.getElementsByClassName('dashLoaded')
-    for (var i = 0; i<preLoadingElems.length; i++) {
-      if (loading) {
-        show(preLoadingElems[i])
-      } else {
-        hide(preLoadingElems[i])
-      }
-    }
-    for (var i = 0; i<postLoadingElems.length; i++) {
-      if (loading) {
-        hide(postLoadingElems[i])
-      } else {
-        show(postLoadingElems[i])
       }
     }
   }
